# ImageDecomposerC

./: .gitignore  CMakeLists.txt  README.md  installOpencv.sh  main.cpp  server.py
apps/: CMakeLists.txt  main.cpp
include/distanceCalculators/: DistanceCalculator.hpp  EuclidianDistance.hpp  ManhattanDistance.hpp
include/drawers/: CircleDrawer.hpp  Drawer.hpp  EllipseDrawer.hpp  RectangleDrawer.hpp  SquareDrawer.hpp  TriangleDrawer.hpp
src/: CMakeLists.txt
src/distanceCalculators/: CMakeLists.txt  EuclidianDistance.cpp  ManhattanDistance.cpp
src/drawers/: CMakeLists.txt  CircleDrawer.cpp  EllipseDrawer.cpp  RectangleDrawer.cpp  SquareDrawer.cpp  TriangleDrawer.cpp
templates/: client_index.html  index.html
